[tool.poetry]
name = "gmk67"
version = "0.1.0"
description = "Simple tool to send HID events to the GMK67, allows controlling of the lights."
authors = ["Yorick Rommers <yorick-rommers@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
hid = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
